# Chunk-Compaction-in-Vectorized-Execution-SIMD

./: .clang-format  CMakeLists.txt  LICENSE  README.md  avx512_hash.cpp  avx512_main.cpp  base.cpp  base.h  build_versions.sh  chaining_ht.cpp  chaining_ht.h  code_generator.py  compactor.cpp  compactor.h  data_collection.cpp  data_collection.h  gather_functions.h  hash_functions.h  hash_table.cpp  hash_table.h  linear_probing_hash_table.cpp  linear_probing_hash_table.h  linear_probing_ht.cpp  linear_probing_ht.h  main.cpp  negative_feedback.hpp  profiler.h  scalar_gather.h  scalar_hash.cpp  scalar_hash_table.cpp  scalar_hash_table.h  scalar_main.cpp  scalar_simd_main.cpp  setting.h  simd_base.h  simd_hash_probing_notes  simd_hash_table.cpp  simd_hash_table.h  simd_main.cpp  simd_micro_bench.cpp
